--- a/pm-analyzer-fiori/webapp/index.html
+++ b/pm-analyzer-fiori/webapp/index.html
@@ -1,18 +1,19 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>PM Qualitätsassistent</title>
+
     <style>
-        html, body, body > div, #container, #container-uiarea {
+        html, body, #content {
             height: 100%;
         }
     </style>
+
     <script
         id="sap-ui-bootstrap"
-        src="resources/sap-ui-core.js"
+        src="https://sdk.openui5.org/resources/sap-ui-core.js"
         data-sap-ui-theme="sap_horizon"
         data-sap-ui-resourceroots='{
             "com.sap.pm.pmanalyzerfiori": "./"
@@ -21,9 +22,10 @@
         data-sap-ui-compatVersion="edge"
         data-sap-ui-async="true"
         data-sap-ui-frameOptions="trusted"
-    ></script>
+        data-sap-ui-xx-componentPreload="off">
+    </script>
 </head>
-<body class="sapUiBody sapUiSizeCompact" id="content">
+<body class="sapUiBody" id="content">
     <div
         data-sap-ui-component
         data-name="com.sap.pm.pmanalyzerfiori"
