--- a/pm-analyzer-fiori/webapp/index.html
+++ b/pm-analyzer-fiori/webapp/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PM Notification Quality Analyzer</title>
     <script id="sap-ui-bootstrap"
-        src="resources/sap-ui-core.js"
+    src="https://sdk.openui5.org/resources/sap-ui-core.js"
         data-sap-ui-libs="sap.m, sap.ui.layout, sap.ui.comp"
         data-sap-ui-theme="sap_horizon"
         data-sap-ui-compatVersion="edge"
